Update fluentd config

--- a/fluentd/etc/fluent.conf
+++ b/fluentd/etc/fluent.conf
@@ -1,20 +1,36 @@
 <source>
   @type forward
   port 24224
-  bind 0.0.0.0
 </source>
 
-<filter grabt.listener.**>
+# <match>
+#   @type file
+#   path /var/log/fluent/myapp
+# </match>
+
+<filter gts.lsnr.**>
   @type parser
-  key_name "$.log"
-  hash_value_field "log"
-  reserve_data true
+  key_name log
+#   inject_key_prefix my_
+  hash_value_field l # create "log.status etc."
+#   reserve_data true # keep original "log"
   <parse>
     @type json
+    time_key time
+    keep_time_key true
   </parse>
 </filter>
 
-<match grabt.listener.**>
+<filter gts.lsnr.**>
+    @type record_transformer
+    <record>
+        tag ${tag}
+        time ${time}
+        # original_log ${record["log"]} # needs reserve_data to be true
+    </record>
+</filter>
+
+<match gts.lsnr.**>
     @type elasticsearch
     scheme https
     ca_file /ca.crt
@@ -22,14 +38,12 @@
     password hello100
     host es01
     port 9200
-    key_name log
-    reserve_time true
-    format json
-    index_name grabtracksp-listeners
+    include_timestamp true
+    index_name gts-listeners
     type_name fluentd
 </match>
 
-<match grabt.service.**>
+<match gts.srvc.**>
     @type elasticsearch
     scheme https
     ca_file /ca.crt
@@ -37,7 +51,8 @@
     password hello100
     host es01
     port 9200
-    index_name grabtracksp-services
+    include_timestamp true
+    index_name gts-services
     type_name fluentd
 </match>
 
@@ -49,6 +64,7 @@
     password hello100
     host es01
     port 9200
-    index_name grabtracksp
+    include_timestamp true
+    index_name gts
     type_name fluentd
 </match>
